@@ -205,7 +205,9 @@ class JDatabaseSQLSrv extends JDatabase
 		$result = addslashes($text);
 		$result = str_replace("\'", "''", $result);
 		$result = str_replace('\"', '"', $result);
-		$result = str_replace('\/', '/', $result);
+		$result = str_replace('\\\/', '/', $result);
+		$result = str_replace('\\\\', '\\', $result);
+		
 
 		if ($extra)
 		{
