@@ -26,12 +26,16 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+29-Mar-2012 Mark Dexter
+ # [#28323] com_joomlaupdate does not delete joomla.xml file in root folder
+
 29-Mar-2012 Christophe Demko
  $ Updating installation ini file sk-SK
 
 28-Mar-2012 Mark Dexter
  # [#28303] Change 28026 so it doesn't modify platform files
  # [#28252] Don't show the site secret and optimize ConfigModelApplication
+ # [#28172] Backslashes are added every time you save Wrapper menu item
 
 28-Mar-2012 Christophe Demko
  # [#28314] #28299 can cause performance issue if root category is loaded in non multilanguage mode
